# llm-scfg

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  gemini_api.py  main.py  open_weights.py  prek.toml  prompt_viewer.py  pyproject.toml  test_embedding.py
data/: grammar_01c56a6054657a13.json  grammar_01cf929ed84fec4e.json  grammar_01d791410e977c35.json  grammar_0235faa4c950dcec.json  grammar_025225813139a658.json  grammar_0257754e68758e55.json  grammar_027fcfd41cf41fa5.json  grammar_034e9f670fad15c8.json  grammar_040f65b53e50ffea.json  grammar_0431c468a1779406.json  grammar_049c97975cbd3343.json  grammar_057a192ce184e05f.json  grammar_057f20bbdde1918c.json  grammar_0634dd742c1c64e6.json  grammar_07226db89f40221f.json  grammar_088726ae62fbd63a.json  grammar_08c79067b1ad20a6.json  grammar_08e3ed11c3e513f4.json  grammar_09414753cd5c7054.json  grammar_09b94d449184146d.json  grammar_0a55265b5a8dead1.json  grammar_0a73d283ed43b274.json  grammar_0b3846735801d4db.json  grammar_0ba0b9ce98c9369d.json  grammar_0ba35c7b518d6c98.json  grammar_0bb3f6635d6b244b.json  grammar_0bd2bfded07efeea.json  grammar_0beae0ba2c87334d.json  grammar_0e2a773f7d347e15.json  grammar_0f81d4ec8e80b409.json  grammar_0fd91a11b3070d07.json  grammar_0fec1440963e0e17.json  grammar_1003305d607ccdf6.json  grammar_117494de9d68d4e2.json  grammar_11ebae2ce4ae09db.json  grammar_1254b14b0290af09.json  grammar_1266caf747c0b0a2.json  grammar_12cc36904056e4da.json  grammar_1370a2609d5f9708.json  grammar_1412f2861fefd22b.json  (+993 more)
docs/: agreement-roadmap.md
notebooks/: aesthetics.py  agreement_exp.ipynb  combined_exp.ipynb  complexity_exp.ipynb  cross_experiment_error_analysis.ipynb  error_analysis.py  error_analysis_deep_dive.ipynb  error_analysis_viewer.html  hf.ipynb  orthography_exp.ipynb  size_exp.ipynb  (+6 more)
(+797 files in other folders)
