[project]
name = "scfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evaluate>=0.4.6",
    "fire>=0.7.0",
    "google-genai>=1.43.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "nbstripout>=0.8.1",
    "nltk>=3.9.2",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pyrootutils>=1.0.4",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "sacrebleu>=2.5.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "strsimpy>=0.2.1",
    "tiktoken>=0.10.0",
    "tqdm>=4.67.1",
    "tokenizers>=0.22.1",
    "transformers>=4.57.6",
    "wordfreq>=3.1.1",
]

[dependency-groups]
cluster = [
    "vllm>=0.17.1 ; sys_platform == 'linux'",
    "wandb>=0.25.1",
]
dev = [
    "prek>=0.3.6",
    "ty>=0.0.4",
]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
exclude = ["**/*.ipynb"]
